5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1807_2571.log
== TEST (2019-06-13 07:12:09) 
-- CODE:
x = input()

print(size(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(size(x))
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:12:28) 
-- CODE:
from numpy import *
x = input()

print(size(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:12:38) 
-- CODE:
from numpy import *
x = input()

print(size(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:12:42) 
-- CODE:
from numpy import *
x = input()

print(size(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:13:05) 
-- CODE:
from numpy import *
x = input()

print(x[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:13:13) 
-- CODE:
from numpy import *
x = input()

print(x[1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:16:58) 
-- CODE:
from numpy import *
x = input()


a = string()
for i in x:
	if x[i] == "a":
		
-- ERROR:
File "XXXX", line 9
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:17:09) 
-- CODE:
from numpy import *
x = input()


a = string()
for i in x:
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:17:19) 
-- CODE:
from numpy import *
x = input()


a = str()
for i in x:
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:17:30) 
-- CODE:
from numpy import *
x = input()


a = str()
for i in x:
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:17:32) 
-- CODE:
from numpy import *
x = input()



for i in x:
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:17:54) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in x:
	if x[i] == a:
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:19:15) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in x:
	if x[i] == 1:
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:19:58) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in range(size(x)):
	if x[i] == 1:
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:20:07) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in range(size(x)):
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:20:31) 
-- CODE:
from numpy import *
x = input()
x = eval(x)

a = "a"
for i in range(size(x)):
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:20:33) 
-- CODE:
from numpy import *
x = input()
x = eval(x)

a = "a"
for i in range(size(x)):
	if x[i] == "a":
		print(x)
-- EXECUTION TIME:
1.27585
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2571/main.py", line 3, in <module>
    x = eval(x)
  File "<string>", line 1, in <module>
NameError: name 'Instituto_de_Computacao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:20:33) 
-- CODE:
from numpy import *
x = input()
x = eval(x)

a = "a"
for i in range(size(x)):
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:20:49) 
-- CODE:
from numpy import *
x = input()
x = array(x)

a = "a"
for i in range(size(x)):
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:21:54) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in range(len(x)):
	if x[i] == "a":
		print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:22:07) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in range(len(x)):
	if x[i] == "a":
		print(x[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:22:09) 
-- CODE:
from numpy import *
x = input()


a = "a"
for i in range(len(x)):
	if x[i] == "a":
		print(x[i])
-- EXECUTION TIME:
0.996158
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
a
a
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
a
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:23:48) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
		
	else:
		a[i] = a[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:24:07) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
		
	else:
print(a)
-- ERROR:
File "XXXX", line 12
    print(a)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:24:16) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
		
	else

print(a)
-- ERROR:
File "XXXX", line 11
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:24:20) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
		
	else:

print(a)
-- ERROR:
File "XXXX", line 13
    print(a)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:24:27) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
		
	else:
-- ERROR:
File "XXXX", line 12
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:24:35) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:04) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] = a[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:12) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] = a[i]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:26) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
-- ERROR:
File "XXXX", line 11
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:28) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
-- ERROR:
File "XXXX", line 11
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:32) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:37) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:25:44) 
-- CODE:
from numpy import *
x = input()


a = "a"
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:26:28) 
-- CODE:
from numpy import *
x = input()


a = "a"
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] = x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:26:44) 
-- CODE:
from numpy import *
x = input()


a = "a"
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] == x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:26:49) 
-- CODE:
from numpy import *
x = input()


a = "a"
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] == x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:26:57) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] = x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:00) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a[i] = x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:09) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:15) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:17) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:25) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:29) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:40) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:43) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 07:27:45) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:27:48) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- EXECUTION TIME:
1.09535
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 07:28:40) 
-- CODE:
from numpy import *
x = input()


a = ""
h = 0
for i in range(len(x)):
	if x[i] == "a" or x[i] == "A":
		h += 1
	else:
		a += x[i]
print(a)
-- EXECUTION TIME:
1.05372
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
